1.4.7
- Use now FluidSynth and not TiMidity as MIDI synthesizer (Linux only).
- Fix for .MID and .MIDI files (upper-case extension)
- Workaround wxWidgets bug that caused spinners to disappear on OSX

1.4.6
- Add 'duplicate track' features
- Add 'recent files' menu
- Implement resizing notes with the mouse cursor
- Allow background tracks in score editor
- Score editor's notation flags (musical and linear notations) are now saved in .aria file
- Add GTK-style scrollbar for Linux systems
- "Select all" and "Unselect all" buttons for background tracks in track properties
- Add keyboard shortcut to change note velocity (Alt + up/down, Alt + pageup/pagedown)
- Update to latest version of libjdksmidi


1.4.5
- Fix bug when saving after exporting MIDI file
- Add 'Mute' and 'Solo'
- Ask for sequence properties on creation
- Add global track volume picker
- Add keyboard shortcuts to change magnetic grid
- Add 'Scroll notes into view' command
- Add tooltips to many track widgets

1.4.4
- Fix looping bugs
- Fix magnetic grid dropdown menu
- Fix bug preventing the name of the tempo controller from showing up
- Fix assertion failure on right-click
- Fix bug where the config file could get corrupted
- Use GDI+ in Windows builds to correct printing

1.4.3
- Improve 'new version' notification (no more a warning look, include link to website)
- Better handle when the zoom parameter is missing in a .aria file (which happens when loading a file generated by an old version)
- Fix a case where looping would fail
- Fix more truncated texts on linux
- Fix opening files with double-click on Linux
- Allow setting song start with Ctrl-Click or Alt-Click in the measure bar
- Instrument names may now be translated
- Fix opening a new file when one is already playing on OSX
- Save the background tracks settings
- Make note length detection in score editor stricter to avoid notes being incorrectly detected as triplets
- Improve metronome when using time signatures like 6/8